<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="45dp"
    android:id="@+id/registration_view"
    android:background="#f6f6f6"
    >


    <TextView
        android:id="@+id/tw_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/welcome_to"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/tw_Drip_Trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:text="@string/drip_trip"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="28sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_shape"
        android:hint="@string/enter_your_login"
        android:textColorHint="#adadad"
        android:minHeight="48dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_shape"
        android:hint="@string/enter_your_first_name"
        android:textColorHint="#adadad"
        android:minHeight="48dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_second_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_shape"
        android:hint="@string/enter_your_second_name"
        android:textColorHint="#adadad"
        android:minHeight="48dp" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_shape"
        android:hint="@string/enter_your_email"
        android:textColorHint="#adadad"
        android:minHeight="48dp" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_shape"
        android:hint="@string/enter_your_password"
        android:textColorHint="#adadad"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_shape"
        android:hint="@string/confirm_your_password"
        android:textColorHint="#adadad"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_shape"
        android:backgroundTint="#000000"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="24sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/to_authorization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/sign_in"
        android:textColor="#666666"
        android:textSize="20sp" />

</LinearLayout>
