<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/orders_available_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="45dp">


    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider2"
        android:layout_width="2dp"
        android:layout_height="23dp"
        app:dividerColor="@color/black"
        android:background="?android:attr/listDivider"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/squada_one"
        android:text="@string/available"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/divider2"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/to_taken_orders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/squada_one"
        android:text="@string/taken"
        android:textColor="#4f4f4f"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/divider2"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginVertical="60dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#000000"
        app:strokeWidth="1dp">


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/nike" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="85dp"
            android:fontFamily="@font/squada_one"
            android:text="Seller: lalala baba, +123123123"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/squada_one"
            android:text="Buyer: lalala baba, +123123123"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/squada_one"
            android:text="From: Kharkiv"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:layout_marginStart="85dp"
            android:fontFamily="@font/squada_one"
            android:text="To: Kharkiv"
            android:textColor="#000000" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="15dp"
            android:layout_marginTop="90dp"
            android:layout_marginStart="95dp"
            android:fontFamily="@font/squada_one"
            android:text="13.11.2023"
            android:textColor="#656565" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/squada_one"
            android:text="Order № 10235"
            android:textColor="#000000" />

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="74dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="29dp"
        android:background="@drawable/rounded_shape_button"
        android:backgroundTint="#000000"
        android:text="@string/take"
        android:textColor="#ffffff"
        android:fontFamily="@font/squada_one"
        android:textSize="13sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>